environments/kubernetes/overlays/template-ephemeral/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: racket
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: racket
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
